added some color

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Simulation</title>
+    <link rel='stylesheet' href="index.css"/> <!-- Gives the page style - GRABS INDEX.CSS -->
 </head>
 
 <script src='index.js'> // from what I can tell I can place script anywhere so I want to make it look clean - AT THE TOP
