created some text

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel='stylesheet' href="index.css"/> <!-- Gives the page style - GRABS INDEX.CSS -->
 </head>
 
-<script src='index.js'> // from what I can tell I can place script anywhere so I want to make it look clean - AT THE TOP
-</script>
+
 
 <body> <!-- I want this to close everything - MAIN BODY -->
-    <p>something here</p>
+    <h1> Welcome to Amazon! </h1>
+
+    <p> We are thrilled that you decided to join our staff. We see that you have signed up for a position in the FULFILEMENT CENTER and 
+        would like to take the opportunity to talk about what you will be your responsibilities. </p>
+
+    <script src='index.js'> 
+    </script>
 </body>
 
 </html>
