I am planning out how to proceed

--- a/index.html
+++ b/index.html
@@ -5,18 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Simulation</title>
     <link rel='stylesheet' href="index.css"/> <!-- Gives the page style - GRABS INDEX.CSS -->
+
 </head>
 
+<body> 
+    <div class='intro-container'> <!-- I want this to close everything - MAIN DIV -->
+        <h1> Welcome to Amazon! </h1>
+
+        <p> We are thrilled that you decided to join our staff. We see that you have signed up for a position in the FULFILEMENT CENTER and 
+            would like to take the opportunity to talk about what you will be your responsibilities. </p>
+    </div>
+    
+    <div id='timer'> 
+
+    </div>
+
+    <div class='difficulty-container'>
+        <h2>Please Select A Level</h2>
+
+    </div>
+
+    <div class='game-container'></div>
+    
 
 
-<body> <!-- I want this to close everything - MAIN BODY -->
-    <h1> Welcome to Amazon! </h1>
-
-    <p> We are thrilled that you decided to join our staff. We see that you have signed up for a position in the FULFILEMENT CENTER and 
-        would like to take the opportunity to talk about what you will be your responsibilities. </p>
-
-    <script src='index.js'> 
-    </script>
+    <script src='index.js'> </script>
 </body>
 
 </html>
