creating li for the rules

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <p> You will be taking items and place them into pods (STOWING). Pod range from SMALL, MEDIUM, LARGE.  </p>
 
         <h2> RULES:</h2>
-        <li id='rules'>
-            
-        </li>
+        <ul id="rules">
+
+		</ul>
 
     </div>
 
@@ -32,6 +32,7 @@
     <div class='game-container'>
 
         <h1 id='timer'> </h1>
+        <h1 id='times-up'></h1>
 
         <div class='pod-contanier'>
         </div>
